docs/notes/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dem-api
  labels:
    service: dem-api
spec:
  selector:
    deploy: dem-api
  ports:
    - port: 5000
      targetPort: 5000
